--- a/recommender/users/templates/signin.html
+++ b/recommender/users/templates/signin.html
@@ -29,11 +29,31 @@
                     </div>
                     <div class="mb-5">
                         <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
-                        <input type="password" name="password" id="password"
-                               class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg
-                    focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                               required/>
+
+                        <div class="relative">
+                            <input type="password" name="password" id="password"
+                                   class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pr-10 p-2.5"
+                                   required/>
+
+                            <!-- Eye Button -->
+                            <button type="button"
+                                    onclick="togglePassword()"
+                                    class="absolute inset-y-0 right-0 flex items-center pr-3 text-gray-500 hover:text-gray-700"
+                                    tabindex="-1">
+                                <svg id="eyeIcon" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none"
+                                     viewBox="0 0 24 24"
+                                     stroke="currentColor">
+                                    <!-- Initial: eye-off (hidden) icon -->
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                          d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.542-7a9.957 9.957 0 012.477-4.192M6.2 6.2A9.965 9.965 0 0112 5c4.478 0 8.268 2.943 9.542 7a9.973 9.973 0 01-4.122 5.223M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                          d="M3 3l18 18"/>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
+
+
                     <div class="flex items-start mb-5">
                         <div class="flex items-center h-5">
                             <input id="remember" type="checkbox" value=""
@@ -117,6 +137,31 @@
         }
 
 
+    </script>
+
+    <script>
+        function togglePassword() {
+            const input = document.getElementById("password");
+            const icon = document.getElementById("eyeIcon");
+
+            if (input.type === "password") {
+                input.type = "text"; // Show password
+                icon.innerHTML = `
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
+      `;
+            } else {
+                input.type = "password"; // Hide password
+                icon.innerHTML = `
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.542-7a9.957 9.957 0 012.477-4.192M6.2 6.2A9.965 9.965 0 0112 5c4.478 0 8.268 2.943 9.542 7a9.973 9.973 0 01-4.122 5.223M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 3l18 18"/>
+      `;
+            }
+        }
     </script>
 
 
